Add resume section responsive

--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -268,7 +268,7 @@
                             <!-- <p>Lisque persius interesset his et, in quot quidam persequeris vim, ad mea essent possim iriure.</p> -->
                         </div>
                     </div>
-                    <div class="col-md-6 resume-section">
+                    <div class="col-md-6 resume-section mt-2">
                         <h1 class="mb-4">My Experience</h1>
                         <div class="resume-item">
                             <h2>2021 - ...</h2>
