--- a/static/assets/css/resume.css
+++ b/static/assets/css/resume.css
@@ -1,5 +1,17 @@
 /* Resume Section Start */
 
+@media only screen and (min-width: 767px) {
+    .mt-2 {
+        margin-top: 0rem !important;
+    }
+}
+
+@media only screen and (max-width: 767px) {
+    .mt-2 {
+        margin-top: 2rem !important;
+    }
+}
+
 .resume-section h1 {
     font-size: 24px;
     font-weight: 600;
