--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -262,7 +262,7 @@
                     <div class="col-md-6 resume-section">
                         <h1 class="mb-4">My Education</h1>
                         <div class="resume-item">
-                            <h2>2021 - ...</h2>
+                            <h2>2021 - Present</h2>
                             <h1>Web-Development</h1>
                             <span>Pragmatech Education & Development Center</span>
                             <!-- <p>Lisque persius interesset his et, in quot quidam persequeris vim, ad mea essent possim iriure.</p> -->
@@ -271,7 +271,7 @@
                     <div class="col-md-6 resume-section mt-2">
                         <h1 class="mb-4">My Experience</h1>
                         <div class="resume-item">
-                            <h2>2021 - ...</h2>
+                            <h2>2021 - Present</h2>
                             <h1>Mentor</h1>
                             <span>Pragmatech Education & Development Center</span>
                             <!-- <p>Lisque persius interesset his et, in quot quidam persequeris vim, ad mea essent possim iriure.</p> -->
