--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -126,7 +126,7 @@
                                 </div>
                                 <div class="header-social-list d-flex align-items-center">
                                     <span>
-                                        <a href="https://github.com/Sabuhi0" class="github">
+                                        <a href="https://github.com/Sabuhi0" class="github" target="_blank">
                                             <i class="fab fa-github"></i>
                                         </a>
                                         <a href="https://www.instagram.com/sabuhigasimov/?hl=en" class="instagram" target="_blank">
