--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -453,6 +453,9 @@
                                     <a href="https://www.facebook.com/gasimov0/" class="facebook" target="_blank">
                                         <i class="fab fa-facebook-f"></i>
                                     </a>
+                                    <a href="https://www.linkedin.com/in/sabuhi-gasimov-0466b5226/" class="linkedin" target="_blank">
+                                        <i class="fa-brands fa-linkedin"></i>
+                                    </a>
                                     <a href="https://www.instagram.com/sabuhigasimov/?hl=en" class="instagram" target="_blank">
                                         <i class="fab fa-instagram"></i>
                                     </a>
