--- a/static/assets/css/variables.css
+++ b/static/assets/css/variables.css
@@ -13,6 +13,7 @@
     --color-mine-shaft: #202020;
     --color-mine-shaft-100: #242424;
     --color-charade: #252B33;
+    --color-outer-space: #343A40;
     --color-cape-cod: #4C4D4D;
     --color-tundora: #414141;
     --color-pale-sky: #6C757D;
