Update about section

--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -169,13 +169,13 @@
         </div>
         <!-- Intro Section End -->
     </section>
-    <section id="about">
+    <section id="about" class="bg-dark">
         <!-- About Section Start -->
-        <div class="about-section pt-7">
+        <div class="about-section pt-7 pb-4">
             <!-- Heading Section Start -->
             <div class="header-text position-relative mb-80">
                 <h2 class="text-center">About Me</h2>
-                <p class="position-center text-center">
+                <p class="position-center text-center text-light">
                     Know Me More
                     <span class="heading-separator-line border-bottom d-block mx-auto"></span>
                 </p>
@@ -183,7 +183,7 @@
             <!-- Heading Section End -->
             <div class="container">
                 <div class="row mt-4">
-                    <div class="col-md-8 about-information">
+                    <div class="col-md-8 about-information text-light">
                         <h1>I'm <span>Sabuhi Gasimov,</span> a Web Developer</h1>
                         <p>{{prof.about}}</p>
                     </div>
