Update services section

--- a/static/assets/css/common.css
+++ b/static/assets/css/common.css
@@ -218,7 +218,7 @@ body {
 }
 
 .section {
-    background: var(--color-athens-gray);
+    background: var(--color-outer-space);
     /* margin-top: 6rem; */
     padding-top: 5rem;
     padding-bottom: 4rem;
