--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -217,7 +217,7 @@
         <!-- What I do Section Start -->
         <div class="section">
             <!-- Heading Section Start -->
-            <div class="header-text position-relative">
+            <div class="header-text position-relative text-light">
                 <h2 class="text-center">Skills</h2>
                 <p class="position-center text-center">
                     What I Do?
