--- a/static/assets/css/variables.css
+++ b/static/assets/css/variables.css
@@ -7,6 +7,7 @@
     --color-athens-gray: #F8F9FA;
     --color-geyser: #D4E0E2;
     --color-cod-gray: #111111;
+    --color-woodsmoke: #111418;
     --color-shark: #212529;
     --color-mirage: #171C24;
     --color-bunker: #0D1117;
