--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -245,10 +245,10 @@
         </div>
         <!-- What I do Section End -->
     </section>
-    <section id="resume">
-        <div class="resume-section pt-7">
+    <section id="resume" class="bg-dark">
+        <div class="resume-section pt-7 pb-4">
             <!-- Heading Section Start -->
-            <div class="header-text position-relative mb-6">
+            <div class="header-text position-relative mb-5 text-light">
                 <h2 class="text-center">Summary</h2>
                 <p class="position-center text-center">
                     Resume
@@ -260,7 +260,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 resume-section">
-                        <h1 class="mb-4">My Education</h1>
+                        <h1 class="mb-4 text-light">My Education</h1>
                         <div class="resume-item">
                             <h2>2021 - Present</h2>
                             <h1>Web-Development</h1>
@@ -268,7 +268,7 @@
                         </div>
                     </div>
                     <div class="col-md-6 resume-section mt-2">
-                        <h1 class="mb-4">My Experience</h1>
+                        <h1 class="mb-4 text-light">My Experience</h1>
                         <div class="resume-item">
                             <h2>2021 - Present</h2>
                             <h1>Mentor</h1>
