--- a/static/assets/css/blog.css
+++ b/static/assets/css/blog.css
@@ -34,13 +34,14 @@
 
 .blog-item h1 {
     margin-top: 10px;
+    color: var(--color-white);
+
 }
 
 .blog-item h1 a {
     /* font-family: "ReadexProRegular"; */
     font-weight: 600 !important;
     font-size: 20px;
-    color: var(--color-mine-shaft);
     line-height: 1.3;
     color: inherit;
 }
@@ -49,7 +50,7 @@
     /* font-family: "ReadexProLight"; */
     font-weight: 400 !important;
     font-size: 14px;
-    color: var(--color-mine-shaft-100);
+    color: rgba(255,255,255,.5);
     padding-top: 15px;
 }
 
