Update works section

--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -215,7 +215,7 @@
     </section>
     <section id="skills">
         <!-- What I do Section Start -->
-        <div class="section">
+        <div class="section bg-dark-light">
             <!-- Heading Section Start -->
             <div class="header-text position-relative text-light">
                 <h2 class="text-center">Skills</h2>
@@ -281,9 +281,9 @@
         </div>
     </section>
     <section id="blog">
-        <div class="blog-section pt-7">
+        <div class="section pt-7 bg-dark-light">
             <!-- Heading Section Start -->
-            <div class="header-text position-relative mb-6">
+            <div class="header-text position-relative mb-6 text-light">
                 <h2 class="text-center">Blog</h2>
                 <p class="position-center text-center">
                     Read On
@@ -315,10 +315,10 @@
     </section>
     <section id="work">
         <!-- My Work Section Start -->
-        <div class="section">
+        <div class="section bg-dark">
             <div class="container">
                 <!-- Heading Section Start -->
-                <div class="header-text position-relative mb-4">
+                <div class="header-text position-relative mb-4 text-light">
                     <h2 class="text-center">Portfolio</h2>
                     <p class="position-center text-center">
                         My Work
