Update feedbacks dark mode

--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -355,11 +355,11 @@
         </div>
         <!-- My Work Section End -->
     </section>
-    <section id="feedbacks">
+    <section id="feedbacks" class="bg-dark-light">
         <!-- Feedbacks Section Start -->
         <div class="container pt-7">
             <!-- Heading Section Start -->
-            <div class="header-text position-relative mb-6">
+            <div class="header-text position-relative mb-6 text-light">
                 <h2 class="text-center">Feedbacks</h2>
                 <p class="position-center text-center">
                     Client Speak
@@ -368,7 +368,7 @@
             </div>
             <!-- Heading Section End -->
         </div>
-        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+        <div id="carouselExampleCaptions" class="carousel slide text-light" data-bs-ride="carousel">
             <!-- <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
