--- a/static/assets/css/feedbacks.css
+++ b/static/assets/css/feedbacks.css
@@ -56,14 +56,13 @@
 } */
 
 .carousel:hover {
-    background: var(--color-mirage);
+    background: var(--color-woodsmoke);
     transition: all .4s ease;
 }
 
-.carousel:hover h1,
-.carousel:hover p,
-.carousel:hover small {
-    color: var(--color-white);
+
+.carousel:hover p {
+    color: rgba(255,255,255,.5);
 }
 
 .fb-slide-prf img {
