--- a/static/assets/css/variables.css
+++ b/static/assets/css/variables.css
@@ -9,6 +9,7 @@
     --color-cod-gray: #111111;
     --color-woodsmoke: #111418;
     --color-shark: #212529;
+    --color-shark-200: #232A31;
     --color-mirage: #171C24;
     --color-bunker: #0D1117;
     --color-mine-shaft: #202020;
