--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -417,11 +417,11 @@
         </div>
         <!-- Feedbacks Section End -->
     </section>
-    <section id="contact">
+    <section id="contact" class="bg-dark">
         <!-- Contact Section Start -->
         <div class="section">
             <!-- Heading Section Start -->
-            <div class="header-text position-relative mb-5">
+            <div class="header-text position-relative mb-5 text-light">
                 <h2 class="text-center">Contact</h2>
                 <p class="position-center text-center">
                     Get in Touch
@@ -488,9 +488,9 @@
         </div>
         <!-- Contact Section End -->
     </section>
-    <footer id="footer">
+    <footer id="footer" class="bg-dark-light">
         <!-- Footer Section Start -->
-        <div class="container ">
+        <div class="container">
             <div class="footer-item">
                 <div class="footer-text">
                     <p>Copyright © 2021 <a href="# ">Sabuhi</a>. All Rights Reserved.</p>
