--- a/static/assets/css/contact.css
+++ b/static/assets/css/contact.css
@@ -37,14 +37,14 @@
 .address-section p,
 .contact-me {
     /* font-family: "ReadexProLight"; */
-    color: var(--color-white);
+    color: var(--color-iron);
     font-size: 16px;
 }
 
 .social-list span a {
     font-size: 20px;
     text-decoration: none;
-    color: var(--color-white);
+    color: var(--color-iron);
 }
 
 .social-list span a:not(:first-child) {
