--- a/static/assets/css/about.css
+++ b/static/assets/css/about.css
@@ -87,7 +87,7 @@
 }
 
 .list ul li:not(:last-child) {
-    border-bottom: 1px solid var(--color-gallery);
+    border-bottom: 1px solid rgba(250, 250, 250, 0.12);
 }
 
 .about-information h1 span,
