--- a/templates/admin/skills.html
+++ b/templates/admin/skills.html
@@ -17,7 +17,7 @@
             </div>
             <div class="form-group mt-3">
                 <label class="text-light">Skills Content</label>
-                <textarea name="skills_content" class="form-control" id="exampleFormControlTextarea1" rows="4" required></textarea>
+                <textarea name="skills_content" class="form-control" id="exampleFormControlTextarea1" rows="4" ></textarea>
             </div>
             <div class="submit_button">
                 <span></span>
