--- a/static/assets/css/variables.css
+++ b/static/assets/css/variables.css
@@ -29,6 +29,7 @@
     --color-fun-blue: #156AA6;
     --color-science-blue: #0A66C2;
     --color-dodger-blue: #1D9BF0;
+    --color-malibu:#61DAFB;
     --color-picton-blue: #38BDF8;
     --color-flamingo-100: #F14E32;
     --color-flamingo: #F56040;
