--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -47,10 +47,12 @@
     </div>
     <!-- Section Pre-loader End -->
 
-    <!-- Click Scroll top -->
+    <!-- Click Scroll top Start -->
     <div class="scroll-button">
         <button type="button" id="btn-back-to-top"><i class="fas fa-chevron-up"></i></button>
     </div>
+    <!-- Click Scroll top End -->
+
     <section id="home">
 
         <!-- Color Switcher Start -->
