--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -203,7 +203,7 @@
                                     <span>Age:</span> {{prof.profile_age}}
                                 </li>
                                 <li>
-                                    <span>From:</span>Lahij, Ismailli, Azerbaijan
+                                    <span>From:</span>Baku, Azerbaijan
                                 </li>
                             </ul>
                             <div class="admin-contact-button">
@@ -273,7 +273,7 @@
                     <div class="col-md-6 resume-section mt-2">
                         <h1 class="mb-4 text-light">My Experience</h1>
                         <div class="resume-item">
-                            <h2>2021 - Present</h2>
+                            <h2>Dec 2021 - Apr 2022</h2>
                             <h1>Mentor</h1>
                             <span>Pragmatech Education & Development Center</span>
                         </div>
