--- a/static/assets/css/services.css
+++ b/static/assets/css/services.css
@@ -55,68 +55,61 @@
     transition: all .3s ease;
 }
 
+.list-groups:hover {
+    cursor: pointer;
+    transition: all .3s ease;
+}
+
 .list-groups:hover .item h1 {
     color: var(--color-white);
 }
 
 .list-groups:hover .fa-html5 {
     color: var(--color-flamingo);
-    transition: all .3s ease;
 }
 
 .list-groups:hover .fa-css3-alt {
     color: var(--color-fun-blue);
-    transition: all .3s ease;
 }
 
 .list-groups:hover .fa-bootstrap {
     color: var(--color-studio);
-    transition: all .3s ease;
 }
 
 .list-groups:hover .fa-js {
     color: var(--color-gold);
-    transition: all .3s ease;
 }
 
 .list-groups:hover .fa-react {
     color: var(--color-malibu);
-    transition: all .3s ease;
 }
 
 .list-groups:hover .fa-python {
     color: var(--color-azure);
-    transition: all .3s ease;
 }
 
 .list-groups:hover .fa-sass {
     color: var(--color-mulberry);
-    transition: all .3s ease;
 }
 
 .list-groups:hover .bxl-flask {
     color: var(--color-cod-gray);
-    transition: all .3s ease;
 }
 
 .list-groups:hover .bxl-tailwind-css {
     color: var(--color-picton-blue);
-    transition: all .3s ease;
 }
 
 .list-groups:hover .bxl-github {
     color: var(--color-bunker);
-    transition: all .3s ease;
 }
 
 .list-groups:hover .bxl-git {
     color: var(--color-flamingo-100);
-    transition: all .3s ease;
 }
 
 .list-groups:hover .bx-data {
     color: var(--color-tundora);
-    transition: all .3s ease;
 }
 
 .list-icon {
