--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -16,28 +16,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&amp;display=swap" rel="stylesheet">
     <!--=============== FONTS-AWESOME  ===============-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer">
-    <!--=============== VARIABLES ===============-->
-    <link rel="stylesheet" href="/static/assets/css/variables.css">
-    <!--=============== COMMON ===============-->
-    <link rel="stylesheet" href="/static/assets/css/common.css">
-    <!--=============== INTRO ===============-->
-    <link rel="stylesheet" href="/static/assets/css/intro.css">
-    <!--=============== ABOUT ===============-->
-    <link rel="stylesheet" href="/static/assets/css/about.css">
-    <!--=============== SERVICES ===============-->
-    <link rel="stylesheet" href="/static/assets/css/services.css">
-    <!--=============== RESUME ===============-->
-    <link rel="stylesheet" href="/static/assets/css/resume.css">
-    <!--=============== WORK ===============-->
-    <link rel="stylesheet" href="/static/assets/css/work.css">
-    <!--=============== FEEDBACKS ===============-->
-    <link rel="stylesheet" href="/static/assets/css/feedbacks.css">
-    <!--=============== BLOG ===============-->
-    <link rel="stylesheet" href="/static/assets/css/blog.css">
-    <!--=============== CONTACT ===============-->
-    <link rel="stylesheet" href="/static/assets/css/contact.css">
-    <!--=============== FOOTER ===============-->
-    <link rel="stylesheet" href="/static/assets/css/footer.css">
+    <!--=============== MAIN-CSS  ===============-->
+    <link rel="stylesheet" href="/static/assets/css/main.css">
 </head>
 
 <body>
