Update resume section

--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -245,7 +245,7 @@
                     <div class="col-md-6 resume-section">
                         <h1 class="mb-4 text-light">My Education</h1>
                         <div class="resume-item">
-                            <h2>2021 - Present</h2>
+                            <h2>Sep 2021 - May 2022</h2>
                             <h1>Web-Development</h1>
                             <span>Pragmatech Education & Development Center</span>
                         </div>
