--- a/templates/admin/update_skill.html
+++ b/templates/admin/update_skill.html
@@ -1,7 +1,7 @@
 {% extends "admin/base.html" %} {% block content %}
 <div class="form-item w-100 h-100vh d-flex align-items-center">
     <div class="container">
-        <h1 class="text-light pt-35">Update Blog</h1>
+        <h1 class="text-light pt-35">Update Skills</h1>
         <form action="/skillEdit/{{newSkill.id}}" method="POST">
             <div class="form-group">
                 <label class="mt-5 text-light">Skills Title</label>
@@ -10,10 +10,6 @@
             <div class="form-group mt-3">
                 <label class="text-light">Skills Class</label>
                 <input type="text" name="skills_class" value="{{newSkill.skills_class}}" class="form-control" id="exampleInputPassword1" required>
-            </div>
-            <div class="form-group mt-3">
-                <label class="text-light">Skills Content</label>
-                <textarea name="skills_content" class="form-control" id="exampleFormControlTextarea1" placeholder="{{newSkill.skills_content}}" rows="5" required></textarea>
             </div>
             <div class="submit_button">
                 <span></span>
