--- a/templates/admin/project.html
+++ b/templates/admin/project.html
@@ -25,7 +25,7 @@
                 <span></span> <button type="submit">Submit</button>
             </div>
         </form>
-        <div class="pb-60">
+        <div class="pb-60 overflow-auto">
             <table class="table rounded text-light">
                 <thead>
                     <tr>
