Add padding bottom

--- a/templates/admin/feedbacks.html
+++ b/templates/admin/feedbacks.html
@@ -25,7 +25,7 @@
                 <span></span> <button type="submit">Submit</button>
             </div>
         </form>
-        <div class="pl-60">
+        <div class="pb-60 pl-60">
             <table class="table rounded text-light">
                 <thead>
                     <tr>
