Update admin panel

--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -27,14 +27,14 @@
         <div class="d-flex">
             <!-- Sidebar Section Start  -->
             <aside class="sidebar">
-                <div class="header-item">
-                    <a class="d-flex align-items-center justify-content-between pl-24" href="#">
-                        <div class="text">
+                <div class="header-item d-flex align-items-center justify-content-between">
+                    <a class="d-flex align-items-center justify-content-between pl-24" href="/admin">
+                        <h1 class="text">
                             <p class="top-text">Admin <span>Panel</span></p>
-                        </div>
-                        <div class="logo" style="padding-right: 14px;">
+                        </h1>
+                        <a href="/" class="logo" style="padding-right: 14px;">
                             <img style="border-radius: 50%;height: 35px;width: 35px;object-fit: cover;object-fit: cover;" src="https://i.pinimg.com/originals/85/76/30/8576308f3ed156f01bd9a865c05852e0.jpg" alt="Dashboard Kit">
-                        </div>
+                        </a>
                     </a>
                 </div>
                 <div class="divider mt-16 mb-16"></div>
