--- a/static/assets/css/work.css
+++ b/static/assets/css/work.css
@@ -1,16 +1,15 @@
-    /* My Work Section Start */
-    
-    .work-section {
-        padding-top: 40px;
-    }
+    /* My Projects Section Start */
     
     .work-section-items {
         position: relative;
+        transform: scale(1);
+        height: 300px;
     }
     
     .image {
-        width: 100%;
         border-radius: 4px;
+        height: 100%;
+        object-fit: cover;
         filter: blur(0px);
         opacity: 1;
     }
@@ -21,19 +20,31 @@
         bottom: 2px;
         left: 0;
         right: 0;
+        width: 100%;
+        height: 100%;
         opacity: 0;
         transition: all .6s ease;
         background: rgba(0, 0, 0, 0.8);
+        border: none;
         border-radius: 4px;
+        transition: all .4s ease;
+    }
+    .work-section-items img {
+        transition: all .4s ease;
     }
     
     .work-section-items:hover .overlay-item {
         opacity: 1;
         filter: blur(0px);
+        transition: all .4s ease;
+        border: 1px solid var(--color-mountain-meadow);
+        transform: scale(0.9);
     }
     
     .work-section-items:hover img {
         filter: blur(1px);
+        transition: all .4s ease;
+        transform: scale(0.9);
     }
     
     .item-text {
@@ -79,4 +90,4 @@
         background: var(--color-white) !important;
         color: var(--color-mountain-meadow) !important;
     }
-    /* My Work Section End */
+    /* My Projects Section End */
