--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -313,7 +313,7 @@
                     </p>
                 </div>
                 <!-- Heading Section End -->
-                <section class="splide" aria-label="Splide Basic HTML Example">
+                <div class="splide" aria-label="Splide Basic HTML Example">
                     <div class="splide__track">
                         <div class="splide__list">
                             {% for project in projects%}
@@ -338,7 +338,7 @@
                             {%endfor%}
                         </div>
                     </div>
-                </section>
+                </div>
                 <script>
                     const splide = new Splide( '.splide', {
                         type: 'loop',
