--- a/static/assets/css/common.css
+++ b/static/assets/css/common.css
@@ -191,18 +191,24 @@ body {
 }
 
 .loader img {
-    /* width: 100px; */
-    height: 100px;
+    transition: all ease 1s;
 }
 
 .disappear {
-    animation: vanish 1s forwards;
+    animation: vanish 5s forwards ease;
 }
 
 @keyframes vanish {
+    0% {
+        opacity: 1;
+        visibility: show;
+        transition: all ease 1s;
+
+    }
     100% {
         opacity: 0;
         visibility: hidden;
+        transition: all ease 1s;
     }
 }
 
